refactored and split into more files. Added pretty print of program lines

--- a/ev3dev-c-master/eg/script/Release/Makefile
+++ b/ev3dev-c-master/eg/script/Release/Makefile
@@ -1,7 +1,7 @@
 
 PROGRAM = roborun
 
-OBJECTS_C = robocup.o magnus.o line.o keys.o pid.o
+OBJECTS_C = actions.o conditions.o robocup.o magnus.o line.o keys.o pid.o
 
 FLAGS_C = -std=gnu99 -O2
 
